New package for view resolvers Add support for xslt: the vars are set like in the other cases, the xslt resolver convert the data to an xml tree by itself.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "require-dev": {
         "twig/twig": "1.*",
-        "philo/laravel-blade": "dev-master"
+        "philo/laravel-blade": "dev-master",
+        "ext-xsl": "*"
     },
     "authors": [
         {"name": "Stanislas Michalak", "email": "stanislas.michalak@gmail.com"}
