--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
       "php": ">=5.3.3",
       "apache/log4php": "2.3.0",
       "symfony/http-foundation": "2.1.*",
-      "doctrine/dbal": "2.5.*@dev",
+      "doctrine/dbal": "2.4.3",
       "ext-mcrypt": "*"
     },
     "require-dev": {
