Config: missing return form existing check. Router: default to file routes config + check in config for provider. Update composer.json

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         {"name": "Stanislas Michalak", "email": "stanislas.michalak@gmail.com"}
     ],
     "autoload": {
-        "psr-4": { "Panda\\": "lib/" }
+        "psr-4": { "Panda\\Core\\": "lib/Core/" }
     }
 }
