Add error and exception handler (powered by Whoops) Application name changed to context. Errors and exceptions are logged in production mode.

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
       "apache/log4php": "2.3.0",
       "symfony/http-foundation": "2.1.*",
       "doctrine/dbal": "2.4.3",
+      "filp/whoops": "~1.0",
       "ext-mcrypt": "*"
     },
     "require-dev": {
